# instruction-notebook

./: .gitattributes  .gitignore  README.md  accumulation_on_dictionary.ipynb  arbitrary_parameters.ipynb  coding_style.ipynb  count_leaves.ipynb  dict_setdefault.ipynb  divoperator.ipynb  enumerate.ipynb  evaluation-order.ipynb  f-string.ipynb  function-definitions-docstrings.ipynb  iterable_iterator.ipynb  lambdas.ipynb  loops.ipynb  map_filter_reduce.ipynb  none_value.ipynb  pyproject.toml  sets.ipynb  variable_scope.ipynb
algorithms/: accumulation_on_list.ipynb
concepts/: class_method_types.ipynb  class_point.ipynb  classes.ipynb  concurrent_modification.ipynb  dicts.ipynb  exceptions.ipynb  files.ipynb  loops.ipynb  object_id.ipynb  zip.ipynb
quizzes/: assignment.ipynb  evaluation-order.ipynb  exam.ipynb  practice_quiz.ipynb  quiz.ipynb
